<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/app_detail"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/app_detail"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/exit"
        app:showAsAction="ifRoom"/>
</menu>