<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnPrimary"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome"
        android:textColor="?colorSecondaryVariant"
        android:textSize="@dimen/_23sdp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_77sdp"
        android:fontFamily="sans-serif-black"
        android:text="@string/signin"
        android:textColor="?colorSecondaryVariant"
        android:textSize="@dimen/_33sdp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_63sdp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign"
        android:background="@drawable/dicodinglogo"
        android:contentDescription="@string/app_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_33sdp"
        android:alpha="0"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

    <com.example.projectbangkit1.ui.auth.EmailEditText
        android:id="@+id/emailInput"
        android:layout_width="@dimen/_270sdp"
        android:hint="@string/email"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:saveEnabled="true"
        android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:alpha="0"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <com.example.projectbangkit1.ui.auth.PasswordEditText
            android:id="@+id/passInput"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:layout_gravity="start"
            android:inputType="textPassword"
            android:saveEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:backgroundTint="?colorSecondary"
        android:text="@string/signin"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_33sdp"
        android:alpha="0"
        android:fontFamily="sans-serif"
        android:text="@string/messagelogin"
        android:textColor="?colorSecondaryVariant"
        android:textSize="@dimen/_13ssp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_33sdp"
        android:alpha="0"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="sans-serif-black"
        android:text="@string/signup"
        android:textColor="?colorSecondaryVariant"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>